--- a/apply.html
+++ b/apply.html
@@ -37,7 +37,6 @@
                   <li><a href="index.html#about">About</a></li>
                   <li><a href="index.html#benefits">Benefits</a></li>
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                  <li><a href="faq.html">FAQ page</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></li>
                 </ul>
@@ -54,8 +53,8 @@
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#benefits">Benefits</a></li>
                         <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                        <li><a href="faq.html">FAQ Page</a></li>
-                        <li><a href="contact.htm">Contact</a></li>
+                        <li><a href="apply.html">Apply Now</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
                 </nav>
@@ -64,7 +63,7 @@
             <!--END OF HEADER-->
         </nav>
         <!--END OF MOBILE NAV-->
-        <section class="application">
+        <article class="application">
             <h2>Application Form</h2>
             <form action="application form" method="post">
                 <fieldset>
@@ -100,10 +99,21 @@
                 </fieldset>
                 <label for="submit-label" class="label5"><input type="submit" value="submit"></label>
             </form>
-        </section>
+        </article>
         <!--END OF APPLICATION FORM-->
         <footer id="footer" aria-label="footer">
             <section id="footer-main">
+                <article class="footer-column">
+                    <h3 class="footer-title">Permalinks</h3>
+                    <ul>
+                        <li><a href="index.html#about">About</a></li>
+                       <li><a href="index.html#benefits">Benefits</a></li>
+                       <li><a href="index.html#credit_cards">Credit Cards</a></li>
+                       <li><a href="apply.html">Apply Now</a></li>
+                       <li><a href="contact.html">Contact</a></li>
+                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                    </ul>
+                </article>
                 <article class="footer-column">
                     <h3 class="footer-title">Photo Credit</h3>
                     <ul>
@@ -112,17 +122,6 @@
                         <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
                         <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
                         <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>
-                    </ul>
-                </article>
-                <article class="footer-column">
-                    <h3 class="footer-title">Permalinks</h3>
-                    <ul>
-                       <li><a href="index.html#about">About</a></li>
-                       <li><a href="index.html#benefits">Benefits</a></li>
-                       <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                       <li><a href="faq.html">FAQ page</a></li>
-                       <li><a href="contact.html">Contact</a></li>
-                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
                 </article>
                 <article class="footer-column">
