--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                   <li><a href="#about">About</a></li>
                   <li><a href="#benefits">Benefits</a></li>
                   <li><a href="#credit_cards">Credit Cards</a></li>
-                  <li><a href="faq.html">FAQ page</a></li>
+                  <li><a href="apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></li>
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <div class="buttons" style="margin: 8px">
+            <div class="buttons" style="margin: 0 0.5rem">
                 <button id="open-sidebar" aria-label="menu"> <i class="fa-solid fa-bars fa-2x"></i></button>
             </div>
             <!--END OF BENTO SIDEBAR-->
@@ -55,7 +55,7 @@
                         <li><a href="#benefits">Benefits</a></li>
                         <li><a href="#credit_cards">Credit Cards</a></li>
                         <li><a href="apply.html">Apply Now</a></li>
-                        <li><a href="contact.htm">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
                 </nav>
@@ -110,7 +110,7 @@
             </div>
         </section>
         <!--END OF BENEFITS SECTION-->
-        <section id="credit_cards">
+        <section id="credit_cards" class="credit_section">
             <h2>Credit Cards</h2>
             <div class="container">
                 <figure class="creditcard">
@@ -121,7 +121,7 @@
                         </picture>
                         <h3>Platinum Card</h3>
                         <p>This credit card is for well established clients, with an excellent credit score and payment history.</p>
-                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
                     </article>
                 </figure>
                 <!--END OF FIRST CREDIT CARD-->
@@ -168,6 +168,18 @@
         <footer id="footer" aria-label="footer">
             <section id="footer-main">
                 <article class="footer-column">
+                    <h3 class="footer-title">Permalinks</h3>
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                       <li><a href="#benefits">Benefits</a></li>
+                       <li><a href="#credit_cards">Credit Cards</a></li>
+                       <li><a href="apply.html">Apply Now</a></li>
+                       <li><a href="contact.html">Contact</a></li>
+                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                        
+                    </ul>
+                </article>
+                <article class="footer-column">
                     <h3 class="footer-title">Photo Credit</h3>
                     <ul>
                         <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
@@ -175,17 +187,7 @@
                         <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
                         <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
                         <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>
-                    </ul>
-                </article>
-                <article class="footer-column">
-                    <h3 class="footer-title">Permalinks</h3>
-                    <ul>
-                       <li><a href="#about">About</a></li>
-                       <li><a href="#benefits">Benefits</a></li>
-                       <li><a href="#credit_cards">Credit Cards</a></li>
-                       <li><a href="apply.html">Apply Now</a></li>
-                       <li><a href="contact.html">Contact</a></li>
-                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                       
                     </ul>
                 </article>
                 <article class="footer-column">
