--- a/signin.html
+++ b/signin.html
@@ -37,7 +37,7 @@
                   <li><a href="index.html#about">About</a></li>
                   <li><a href="index.html#benefits">Benefits</a></li>
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                  <li><a href="faq.html">FAQ page</a></li>
+                  <li><a href="apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></li>
                 </ul>
@@ -54,8 +54,8 @@
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#benefits">Benefits</a></li>
                         <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                        <li><a href="faq.html">FAQ Page</a></li>
-                        <li><a href="contact.htm">Contact</a></li>
+                        <li><a href="apply.html">Apply Now</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
                 </nav>
@@ -72,7 +72,7 @@
                         <label for="password">Password <i class="fa-solid fa-lock"></i> <input id="password" name="password" type="password" required /></label>
                         <label for="remember-me" name="remember-me"><input id="remember-me" type="checkbox" class="inline"> Remember Me</label> 
                     </fieldset>
-                    <label for="submit" class=""><input type="submit" id="submit" value="sign in" aria-label="click button"></label>
+                    <label for="submit"><input type="submit" id="submit" value="sign in" aria-label="click button"></label>
                 </form>
                 <!--END OF SIGN IN FORM-->
             </article>
@@ -82,21 +82,22 @@
                 <article class="footer-column">
                     <h3 class="footer-title">Photo Credit</h3>
                     <ul>
-                       <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
-                       <li><a href="https://www.pexels.com/photo/roll-of-american-dollar-banknotes-tightened-with-band-4386476/">Karolina Grabowska</a></li>
-                       <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
-                       <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
-                       <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>  
+                        <li><a href="index.html#about">About</a></li>
+                       <li><a href="index.html#benefits">Benefits</a></li>
+                       <li><a href="index.html#credit_cards">Credit Cards</a></li>
+                       <li><a href="apply.html">Apply Now</a></li>
+                       <li><a href="contact.html">Contact</a></li>
+                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>  
                     </ul>
                 </article>
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
                     <ul>
-                       <li><a href="index.html#about">About</a></li>
-                       <li><a href="index.html#benefits">Benefits</a></li>
-                       <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                       <li><a href="contact.html">Contact</a></li>
-                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li> 
+                        <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
+                       <li><a href="https://www.pexels.com/photo/roll-of-american-dollar-banknotes-tightened-with-band-4386476/">Karolina Grabowska</a></li>
+                       <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
+                       <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
+                       <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>   
                     </ul>
                 </article>
                 <article class="footer-column">
