--- a/contact.html
+++ b/contact.html
@@ -39,24 +39,24 @@
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
                   <li><a href="apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></li>
+                  <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></li>
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <div class="buttons" style="margin: 8px">
+            <div class="buttons" style="margin: 0 0.5rem">
                 <button id="open-sidebar" aria-label="menu"> <i class="fa-solid fa-bars fa-2x"></i></button>
             </div>
             <!--END OF BENTO SIDEBAR-->
             <header id="header" aria-label="header">
-                <a href="#about" class="logo" aria-label="logo">LOGO</a>
+                <a href="index.html" class="logo" aria-label="logo">LOGO</a>
                 <nav id="desktop-nav" aria-label="desktop navigation">
                     <ul class="nav-links" aria-label="navigation links">
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#benefits">Benefits</a></li>
                         <li><a href="index.html#credit_cards">Credit Cards</a></li>
                         <li><a href="apply.html">Apply Now</a></li>
-                        <li><a href="contact.htm">Contact</a></li>
-                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></a></li>
                     </ul>
                 </nav>
                 <!--END OF DESKTOP NAV-->   
@@ -126,7 +126,7 @@
                        <li><a href="index.html#credit_cards">Credit Cards</a></li>
                        <li><a href="apply.html">Apply Now</a></li>
                        <li><a href="contact.html">Contact</a></li>
-                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></a></li>
                     </ul>
                 </article>
                 <article class="footer-column">
