--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <li><a href="#credit_cards">Credit Cards</a></li>
                   <li><a href="apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></li>
+                  <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></li>
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
@@ -56,7 +56,7 @@
                         <li><a href="#credit_cards">Credit Cards</a></li>
                         <li><a href="apply.html">Apply Now</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></a></li>
                     </ul>
                 </nav>
                 <!--END OF DESKTOP NAV-->   
@@ -79,32 +79,26 @@
                 <article class="benefits-column">
                     <i class="fa-solid fa-plane fa-2x"></i>
                     <h3>Travel</h3>
-                    <ul>
-                        <li>10% Off Tickets</li>
-                        <li>Travel Insurance</li>
-                        <li>Trip Delay Insurance</li>
-                        <li>Car Rental Insurance</li>
-                    </ul>
+                    <p>10% Off Tickets <i class="fa-solid fa-check"></i></p>
+                    <p>Travel Insurance <i class="fa-solid fa-check"></i></p>
+                    <p>Trip Delay Insurance <i class="fa-solid fa-check"></i></p>
+                    <p>Car Rental Insurance <i class="fa-solid fa-check"></i></p>
                 </article>
                 <article class="benefits-column">
                     <i class="fa-solid fa-money-check-dollar fa-2x"></i>
                     <h3>Rewards</h3>
-                    <ul>
-                        <li>5% Cash Back</li>
-                        <li>Reedemable Points</li>
-                        <li>Purchase Protection</li>
-                        <li>Statement Credit</li>
-                    </ul>
+                        <p>5% Cash Back <i class="fa-solid fa-check"></i></p>
+                        <p>Statement Credit <i class="fa-solid fa-check"></i></p>
+                        <p>Purchase Protection <i class="fa-solid fa-check"></i></p>
+                        <p>Reedemable Points <i class="fa-solid fa-check"></i></p>
                 </article>
                 <article class="benefits-column">
                     <i class="fa-solid fa-credit-card fa-2x"></i>
                     <h3>Security</h3>
-                    <ul>
-                        <li>Fraud Alerts</li>
-                        <li>Lock Card</li>
-                        <li>Global Hotline</li>
-                        <li>Card Replacement</li>
-                    </ul>
+                        <p>Fraud Alerts <i class="fa-solid fa-check"></i></p>
+                        <p>Lock Card<i class="fa-solid fa-check"></i> </p>
+                        <p>Global Hotline <i class="fa-solid fa-check"></i></p>
+                        <p>Card Replacement <i class="fa-solid fa-check"></i></p>
                 </article>
                 <!--END OF ARTICLES-->
             </div>
@@ -175,7 +169,7 @@
                        <li><a href="#credit_cards">Credit Cards</a></li>
                        <li><a href="apply.html">Apply Now</a></li>
                        <li><a href="contact.html">Contact</a></li>
-                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></a></li>
                         
                     </ul>
                 </article>
