--- a/apply.html
+++ b/apply.html
@@ -31,7 +31,7 @@
 <!--END OF HEAD-->
 <body>
     <main id="main">
-        <nav id="mobile-nav">
+        <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
                   <li><a href="index.html#about">About</a></li>
@@ -64,7 +64,7 @@
             <!--END OF HEADER-->
         </nav>
         <!--END OF MOBILE NAV-->
-        <article class="application">
+        <article class="application" aria-label="application form">
             <h2>Application Form</h2>
             <form action="application form" method="post">
                 <fieldset>
