--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 <!--END OF HEAD-->
 <body>
     <main id="main">
-        <nav id="mobile-nav">
+        <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
                   <li><a href="index.html#about">About</a></li>
@@ -64,7 +64,7 @@
             <!--END OF HEADER-->
         </nav>
         <!--END OF MOBILE NAV-->
-        <section id="contact" class="contact" aria-label="contact section">
+        <section id="contact" class="contact" aria-label="contact">
             <h2>Contact</h2>
             <div class="container">
                 <form action="contact-form" aria-label="contact-form" >
