--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </head>
 <!--END OF HEAD-->
 <body>
-    <main id="main">
-        <nav id="mobile-nav">
+    <main id="main" aria-label="main">
+        <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
                   <li><a href="#about">About</a></li>
@@ -64,7 +64,7 @@
             <!--END OF HEADER-->
         </nav>
         <!--END OF MOBILE NAV-->
-        <section id="about" style="background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382 (1).avif');">
+        <section id="about" style="background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382 (1).avif');" aria-label="about">
             <div class="container">
                 <article class="about-article">
                     <h1>Credit Card Provider</h1>
@@ -73,7 +73,7 @@
                 </article>
             </div>
         </section>
-        <section id="benefits">
+        <section id="benefits" aria-label="benefits">
             <h2>Benefits</h2>
             <div class="container">
                 <article class="benefits-column">
@@ -104,7 +104,7 @@
             </div>
         </section>
         <!--END OF BENEFITS SECTION-->
-        <section id="credit_cards" class="credit_section">
+        <section id="credit_cards" class="credit_section" aria-label="credit cards">
             <h2>Credit Cards</h2>
             <div class="container">
                 <figure class="creditcard">
@@ -129,7 +129,7 @@
                         <p>Every penny counts and with this card, each eligible purchase receives 5% cash back.</p>
                         <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
                     </article>
-                </figure>
+               
                 <!--END OF SECOND CREDIT CARD-->
                 <figure class="creditcard">
                     <article>
