--- a/signin.html
+++ b/signin.html
@@ -31,7 +31,7 @@
 <!--END OF HEAD-->
 <body>
     <main id="main">
-        <nav id="mobile-nav">
+        <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
                   <li><a href="index.html#about">About</a></li>
@@ -64,18 +64,18 @@
             <!--END OF HEADER-->
         </nav>
         <!--END OF MOBILE NAV-->
-        <article class="sign-in">
-                <form action="sign in" method="post">
-                    <fieldset>
-                        <legend><h2>Sign In</h2></legend>
-                        <label for="name"> User Name <i class="fa-solid fa-user"></i> <input id="name" type="text" required="full name" aria-label="legal name"></label>
-                        <label for="password">Password <i class="fa-solid fa-lock"></i> <input id="password" name="password" type="password" required /></label>
-                        <label for="remember-me" name="remember-me"><input id="remember-me" type="checkbox" class="inline"> Remember Me</label> 
-                    </fieldset>
-                    <label for="submit"><input type="submit" id="submit" value="sign in" aria-label="click button"></label>
-                </form>
-                <!--END OF SIGN IN FORM-->
-            </article>
+        <article class="sign-in" aria-label="sign in form">
+            <form action="sign in" method="post">
+                <fieldset>
+                    <legend><h2>Sign In</h2></legend>
+                    <label for="name"> User Name <i class="fa-solid fa-user"></i> <input id="name" type="text" required="full name" aria-label="legal name"></label>
+                    <label for="password">Password <i class="fa-solid fa-lock"></i> <input id="password" name="password" type="password" required /></label>
+                    <label for="remember-me" name="remember-me"><input id="remember-me" type="checkbox" class="inline"> Remember Me</label> 
+                </fieldset>
+                <label for="submit"><input type="submit" id="submit" value="sign in" aria-label="click button"></label>
+            </form>
+            <!--END OF SIGN IN FORM-->
+        </article>
         <!--END OF SIGN IN SECTION-->
         <footer id="footer" aria-label="footer">
             <section id="footer-main">
