--- a/signin.html
+++ b/signin.html
@@ -65,9 +65,9 @@
         </nav>
         <!--END OF MOBILE NAV-->
         <article class="sign-in" aria-label="sign in form">
+            <h2>Sign In</h2>
             <form action="sign in" method="post">
                 <fieldset>
-                    <legend><h2>Sign In</h2></legend>
                     <label for="name"> User Name <i class="fa-solid fa-user"></i> <input id="name" type="text" required="full name" aria-label="legal name"></label>
                     <label for="password">Password <i class="fa-solid fa-lock"></i> <input id="password" name="password" type="password" required /></label>
                     <label for="remember-me" name="remember-me"><input id="remember-me" type="checkbox" class="inline"> Remember Me</label> 
