edit: signin.html

--- a/signin.html
+++ b/signin.html
@@ -65,15 +65,15 @@
         </nav>
         <!--END OF MOBILE NAV-->
         <article class="sign-in" aria-label="sign in form">
-            <h2>Sign In</h2>
-            <form action="sign in" method="post">
-                <fieldset>
-                    <label for="name"> User Name <i class="fa-solid fa-user"></i> <input id="name" type="text" required="full name" aria-label="legal name"></label>
-                    <label for="password">Password <i class="fa-solid fa-lock"></i> <input id="password" name="password" type="password" required /></label>
-                    <label for="remember-me" name="remember-me"><input id="remember-me" type="checkbox" class="inline"> Remember Me</label> 
-                </fieldset>
-                <label for="submit"><input type="submit" id="submit" value="sign in" aria-label="click button"></label>
-            </form>
+                <form action="sign in" method="post">
+                    <fieldset>
+                        <legend><h2>Sign In</h2></legend>
+                        <label for="name"> User Name:<input id="name" type="text" required="full name" aria-label="legal name"></label>
+                        <label for="password"> Password:<input id="password" name="password" type="password" required /></label>
+                        <label for="remember-me" name="remember-me"><input id="remember-me" type="checkbox" class="inline"> Remember Me</label> 
+                        <label for="submit"><input type="submit" id="submit" class="sign_in" value="sign in" aria-label="click button"></label>
+                    </fieldset>
+                </form>
             <!--END OF SIGN IN FORM-->
         </article>
         <!--END OF SIGN IN SECTION-->
