--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
                   <li><a href="#credit_cards">Credit Cards</a></li>
                   <li><a href="apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></li>
+                  <li><a href="signin.html">Sign In</a></li>
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <div class="buttons" style="margin: 0 0.5rem">
+            <div class="buttons" style="margin:0 0.5rem">
                 <button id="open-sidebar" aria-label="menu"> <i class="fa-solid fa-bars fa-2x"></i></button>
             </div>
-            <!--END OF BENTO SIDEBAR-->
-            <header id="header" aria-label="header">
-                <a href="#about" class="logo" aria-label="logo">LOGO</a>
-                <nav id="desktop-nav" aria-label="desktop navigation">
-                    <ul class="nav-links" aria-label="navigation links">
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#benefits">Benefits</a></li>
-                        <li><a href="#credit_cards">Credit Cards</a></li>
-                        <li><a href="apply.html">Apply Now</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></a></li>
-                    </ul>
-                </nav>
-                <!--END OF DESKTOP NAV-->   
-            </header>
-            <!--END OF HEADER-->
+            <a href="#about" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
+        <header id="header" aria-label="header">
+            <a href="#about" class="logo2" aria-label="logo">LOGO</a>
+            <nav id="desktop-nav" aria-label="desktop navigation">
+                <ul class="nav-links" aria-label="navigation links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#benefits">Benefits</a></li>
+                    <li><a href="#credit_cards">Credit Cards</a></li>
+                    <li><a href="apply.html">Apply Now</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="signin.html">Sign In</a></li>
+                </ul>
+            </nav>
+            <!--END OF DESKTOP NAV-->   
+        </header>
+        <!--END OF HEADER-->
         <section id="about" style="background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382 (1).avif');" aria-label="about">
             <div class="container">
                 <article class="about-article">
@@ -110,13 +110,13 @@
                 <figure class="creditcard">
                     <article>
                         <picture class="image">
-                            <source srcset="./imgs/pexels-karolina-grabowska-4386476.avif" type="image/avif">
-                            <img src="./imgs/pexels-karolina-grabowska-4386476 (1).jpg" width="640" height="960" loading="lazy" alt="money">
+                            <source srcset="./imgs/pexels-rodnae-productions-7821482.avif" type="image/avif">
+                            <img src="./imgs/pexels-rodnae-productions-7821482.jpg" width="640" height="427" loading="lazy" alt="coins">
                         </picture>
                         <h3>Platinum Card</h3>
-                        <p>This credit card is for well established clients, with an excellent credit score and payment history.</p>
-                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                        <p>This credit card is for well established clients, with an excellent credit score and payment history</p>
                     </article>
+                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
                 </figure>
                 <!--END OF FIRST CREDIT CARD-->
                 <figure class="creditcard">
@@ -127,9 +127,9 @@
                         </picture>
                         <h3>Cash Card</h3>
                         <p>Every penny counts and with this card, each eligible purchase receives 5% cash back.</p>
-                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
                     </article>
-               
+                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                </figure>
                 <!--END OF SECOND CREDIT CARD-->
                 <figure class="creditcard">
                     <article>
@@ -139,9 +139,8 @@
                         </picture>
                         <h3>Personal Card</h3>
                         <p>This is a credit card, that is open to students and anyone who wants to establish credit.</p>
-                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
-                        
                     </article>
+                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
                 </figure>
                 <!--END OF THIRD CREDIT CARD-->
                 <figure class="creditcard">
@@ -177,7 +176,7 @@
                     <h3 class="footer-title">Photo Credit</h3>
                     <ul>
                         <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
-                        <li><a href="https://www.pexels.com/photo/roll-of-american-dollar-banknotes-tightened-with-band-4386476/">Karolina Grabowska</a></li>
+                        <li><a href="https://www.pexels.com/photo/black-card-on-top-of-white-envelope-7821482/">RODNAE productions</a></li>
                         <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
                         <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
                         <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>
