--- a/signin.html
+++ b/signin.html
@@ -34,36 +34,36 @@
         <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
                 <ul class="bento">
-                  <li><a href="index.html#about">About</a></li>
+                  <li><a href="index.html">About</a></li>
                   <li><a href="index.html#benefits">Benefits</a></li>
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                  <li><a href="apply.html">Apply Now</a></li>
+                  <li><a href="index.html#apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></li>
+                  <li><a href="signin.html">Sign In</a></li>
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
             <div class="buttons" style="margin: 0 0.5rem">
                 <button id="open-sidebar" aria-label="menu"> <i class="fa-solid fa-bars fa-2x"></i></button>
             </div>
-            <!--END OF BENTO SIDEBAR-->
-            <header id="header" aria-label="header">
-                <a href="index.html" class="logo" aria-label="logo">LOGO</a>
-                <nav id="desktop-nav" aria-label="desktop navigation">
-                    <ul class="nav-links" aria-label="navigation links">
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#benefits">Benefits</a></li>
-                        <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                        <li><a href="apply.html">Apply Now</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></a></li>
-                    </ul>
-                </nav>
-                <!--END OF DESKTOP NAV-->   
-            </header>
-            <!--END OF HEADER-->
+            <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
+        <header id="header" aria-label="header">
+            <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
+            <nav id="desktop-nav" aria-label="desktop navigation">
+                <ul class="nav-links" aria-label="navigation links">
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html#benefits">Benefits</a></li>
+                    <li><a href="index.html#credit_cards">Credit Cards</a></li>
+                    <li><a href="index.html#apply.html">Apply Now</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="signin.html">Sign In</a></li>
+                </ul>
+            </nav>
+            <!--END OF DESKTOP NAV-->   
+        </header>
+        <!--END OF HEADER-->
         <article class="sign-in" aria-label="sign in form">
                 <form action="sign in" method="post">
                     <fieldset>
