--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <article>
                         <picture class="image">
                             <source srcset="./imgs/pexels-rodnae-productions-7821482.avif" type="image/avif">
-                            <img src="./imgs/pexels-rodnae-productions-7821482.jpg" width="640" height="427" loading="lazy" alt="coins">
+                            <img src="./imgs/pexels-rodnae-productions-7821482.jpg" width="640" height="427" loading="lazy" alt="back of credit card">
                         </picture>
                         <h3>Platinum Card</h3>
                         <p>This credit card is for well established clients, with an excellent credit score and payment history</p>
@@ -151,10 +151,10 @@
                         </picture>
                         <h3>Business Card</h3>
                         <p>This credit card is meant for businesses, both small and large. Excellent rates are available.</p>
-                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
                     </article>
-                    <!--END OF FINAL CREDIT CARD-->
+                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
                 </figure>
+                <!--END OF FINAL CREDIT CARD-->
             </div>
         </section>
         <!--END OF CREDIT CARDS SECTION-->
